# htmx-flask

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix
htmx-flask-pico/: Makefile  README.md  pyproject.toml
htmx-flask-pico/flaskr/: __init__.py
htmx-flask-pico/flaskr/blueprints/: active_search.py  bulk_update.py  click_to_edit.py  click_to_load.py  delete_row.py  dialogs_browser.py  dialogs_pico.py  edit_row.py  infinite_scroll.py  inline_validation.py  keyboard_shortcuts.py  lazy_loading.py  progress_bar.py  tabs_hateoas.py  updating_other_content.py  value_select.py
htmx-flask-pico/flaskr/templates/: base.html  html5-test.html  index.html  pico-containers.html  pico-examples-button.html  pico-examples-card.html  pico-examples-menu.html  pico-examples-style.html
htmx-flask-pico/flaskr/templates/active_search/: index.html  search_results.html
htmx-flask-pico/flaskr/templates/bulk_update/: index.html
htmx-flask-pico/flaskr/templates/click_to_edit/: edit.html  index.html
htmx-flask-pico/flaskr/templates/click_to_load/: index.html  more-rows.html
htmx-flask-pico/flaskr/templates/delete_row/: index.html
htmx-flask-pico/flaskr/templates/dialogs_browser/: index.html
htmx-flask-pico/flaskr/templates/dialogs_pico/: index.html  modal.html
htmx-flask-pico/flaskr/templates/edit_row/: edit_row.html  index.html
tailwind-flask/: Makefile  README.md  pyproject.toml  tailwind.config.js
tailwind-flask/tailwind_flaskr/: __init__.py
tailwind-flask/tailwind_flaskr/static/css/: input.css
tailwind-flask/tailwind_flaskr/templates/: base.html  index.html
(+45 files in other folders)
